# puzzles-solver

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
cpp/: CMakeLists.txt  towers.cpp
scala/: build.sbt
scala/puzzles/: KillerSudoku.scala  Unequal.scala
scala/z3s/: dsl.scala
